auth-service/src/main/java/com/example/auth/web/error/IamUnavailableException.java
package com.example.auth.web.error;

public class IamUnavailableException extends RuntimeException {
    public IamUnavailableException(String reason) { super("iam_unavailable:" + reason); }
}
